# kdots

./: .gitignore  .reviewboardrc  .travis.yml  AUTHORS  Board.cpp  Board.h  BoardView.cpp  BoardView.h  BorderFinder.cpp  BorderFinder.h  BorderLine.cpp  BorderLine.h  CMakeLists.txt  COPYING  Cell.cpp  Cell.h  DotTable.cpp  DotTable.h  IPlayer.cpp  IPlayer.h  IPlayerManager.h  IPlayingStrategy.h  LICENSE  MainWindow.cpp  MainWindow.h  Messages.sh  PlayerManagerWET.h  README.md  ScoreCounter.h  UndoObject.cpp  UndoObject.h  UndoStack.cpp  UndoStack.h  UndoState.cpp  UndoState.h  WithExtraMovePlayingStrategy.cpp  WithExtraMovePlayingStrategy.h  WithoutExtraMovePlayingStrategy.cpp  WithoutExtraMovePlayingStrategy.h  boardmodel.cpp  (+80 more)
cmake/: FindLibKDEGames.cmake  KDotsLibConfig.cmake
doc/: CMakeLists.txt  index.docbook
include/: brushcombo.hpp  brushcombodelegate.hpp  constants.hpp  dottable.hpp  edgelist.hpp  gameconfig.hpp  graph.hpp  graphpoint.hpp  mainwindow.hpp  newgamedialog.hpp  newgamewidget.hpp  plugincontainer.hpp  pluginmanagerwidget.hpp  point.hpp  polygon.hpp  polygonfinder.hpp  stepqueue.hpp  tablewidget.hpp
interface/: iconfigurationwidget.hpp  iplugin.hpp  irival.hpp  plugin.hpp
interfaces/: CMakeLists.txt  iplugin.cpp  iplugin.h  kdots_plugin.desktop  pluginmacros.h  tableconfig.h
kdotslib/: CMakeLists.txt  boardmodel.cpp  boardmodel.hpp  boardmodel_p.hpp  constants.hpp  edgelist.hpp  enums.hpp  gameconfig.cpp  gameconfig.hpp  graph.cpp  graph.hpp  graphpoint.cpp  graphpoint.hpp  iboardview.hpp  kdots_api.hpp  point.cpp  point.hpp  polygon.cpp  polygon.hpp  polygon_p.hpp  polygonfinder.cpp  polygonfinder.hpp  polygonfinder_p.hpp  stepqueue.cpp  stepqueue.hpp
kdotslib/interface/: iconfigurationwidget.hpp  iplugin.hpp  irival.hpp
pictures/: CMakeLists.txt  sc-apps-kdots.svgz
plugins/: CMakeLists.txt
plugins/example/: CMakeLists.txt  plugin.cpp  plugin.hpp
plugins/ipconnect/: CMakeLists.txt  configurationwidget.cpp  configurationwidget.hpp  configurationwidget.ui  connectdialog.cpp  connectdialog.hpp  connectdialog.ui  plugin.cpp  plugin.hpp  rival.cpp  rival.hpp
plugins/simpleai/: CMakeLists.txt  decisiontree.cpp  decisiontree.hpp  plugin.cpp  plugin.hpp  prioritymap.cpp  prioritymap.hpp  rival.cpp  rival.hpp  rules
plugins/simpleai/RulesViewer/: CMakeLists.txt  RulesModel.cpp  RulesModel.hpp  RulesViewer.cpp  RulesViewer.hpp  main.cpp
plugins/simpleai/tests/: CMakeLists.txt
plugins/simpleai/tests/prioritymaptest/: CMakeLists.txt  prioritymaptest.cpp  prioritymaptest.hpp
plugins/singlepc/: CMakeLists.txt  kdots_singlepc.desktop  plugin.cpp  plugin.h  plugin.hpp
src/: CMakeLists.txt  dottable.cpp  dottable.h  edgelist.hpp  graph.cpp  graph.h  graphpoint.cpp  graphpoint.h  kdots.desktop  kdots.kdev4  main.cpp  mainwindow.cpp  mainwindow.h  newgamedialog.cpp  newgamedialog.h  newgamedialog.ui  point.hpp  polygon.cpp  polygon.h  stepqueue.cpp  stepqueue.h  tablewidget.cpp  tablewidget.h
src/interface/: ibot.h  irival.hpp
src/plugins/ipconnect/: configurationwidget.cpp  configurationwidget.ui  plugin.cpp  plugin.hpp  rival.cpp
src/plugins/simpleai/: decisiontree.cpp  decisiontree.hpp  plugin.hpp  prioritymap.cpp  prioritymap.hpp  rival.cpp  rival.hpp
src/plugins/simpleai/RulesViewer/: CMakeLists.txt  RulesViewer.cpp  main.cpp
src/plugins/singlepc/: CMakeLists.txt
src/plugins/stupidbot/: CMakeLists.txt
src/ui/: newgamedialog.ui
test/: BorderLineUnitTests.cpp  CMakeLists.txt  CellUnitTests.cpp  DotTableUnitTests.cpp  PlayerInterfaceTests.cpp  PlayingStrategiesUnitTests.cpp  UndoStackTests.cpp
ui/: boardconfigwidget.ui  mainwindow.ui  newgamedialog.ui  newgamefactory.ui  newgamewidget.ui  pluginfactoryview.ui  pluginmanagerwidget.ui
