CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(RulesViewer)

FIND_PACKAGE(Qt4 REQUIRED)

SET(QT_USE_QTGUI TRUE)
SET(QT_USE_QTCORE TRUE)

INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${QT_INCLUDES}
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fexceptions")

ADD_EXECUTABLE(RulesViewer
  main.cpp
  RulesModel.cpp
  RulesModel.hpp
  RulesViewer.cpp
  RulesViewer.hpp
)

TARGET_LINK_LIBRARIES(RulesViewer
  ${QT_LIBRARIES}
)